[package]
name = "backend"
version = "0.1.0"
authors = ["Kay <kro@r7net.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
mut_static = "5.0.0"
lazy_static = "*"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = { version = "0.4.2", features = ["diesel_sqlite_pool"] }
rocket_cors = "0.5.0"
serde_json = "*"
serde-aux = "0.6.1"
chrono = "*"
diesel = "1"
